[gd_scene load_steps=13 format=3 uid="uid://cf5hbhd6tqgaq"]

[ext_resource type="Script" uid="uid://cniqakxt60cvi" path="res://scripts/CodigoBecky.gd" id="1_4chxg"]
[ext_resource type="PackedScene" uid="uid://btnk65uvcf2i0" path="res://Models/novabecky.glb" id="1_aybik"]
[ext_resource type="Texture2D" uid="uid://ch83giuy0t51x" path="res://shaders/panorama_image.png" id="1_rdnwj"]
[ext_resource type="Texture2D" uid="uid://d1m2ib0e1yieb" path="res://shaders/TestMapglb_KKIIDDZZ.png" id="4_1gkf0"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_1gkf0"]
panorama = ExtResource("1_rdnwj")

[sub_resource type="Sky" id="Sky_y2j1u"]
sky_material = SubResource("PanoramaSkyMaterial_1gkf0")

[sub_resource type="Environment" id="Environment_mhcr1"]
background_mode = 2
sky = SubResource("Sky_y2j1u")
tonemap_mode = 2
glow_enabled = true
fog_enabled = true
fog_light_color = Color(0.821667, 0.594223, 0.344848, 1)
fog_light_energy = 1.11
fog_sun_scatter = 0.54
fog_sky_affect = 0.0
volumetric_fog_density = 0.1
volumetric_fog_emission_energy = 0.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_4chxg"]
radius = 0.721755
height = 3.76625

[sub_resource type="BoxShape3D" id="BoxShape3D_1gkf0"]
size = Vector3(400.62, 3.01, 687.48)

[sub_resource type="BoxShape3D" id="BoxShape3D_rdnwj"]
size = Vector3(2.775, 2.78, 3.31)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_mhcr1"]
data = PackedVector3Array(0.125, -0.433013, 0.216506, 0.216506, -0.433013, 0.125, 0, -0.5, 0, 0.25, 0, 0.433013, 0.433013, 0, 0.25, 0.375, -0.25, 0.216506, 0.375, -0.25, 0.216506, 0.216506, -0.25, 0.375, 0.25, 0, 0.433013, 0.433013, 0, 0.25, 0.5, 0, 3.06152e-17, 0.433013, -0.25, 2.65135e-17, 0.433013, -0.25, 2.65135e-17, 0.375, -0.25, 0.216506, 0.433013, 0, 0.25, 0.216506, -0.25, 0.375, 0.375, -0.25, 0.216506, 0.216506, -0.433013, 0.125, 0.375, -0.25, 0.216506, 0.433013, -0.25, 2.65135e-17, 0.25, -0.433013, 1.53076e-17, 0.25, -0.433013, 1.53076e-17, 0.216506, -0.433013, 0.125, 0.375, -0.25, 0.216506, 0, 0, 0.5, 0.25, 0, 0.433013, 0.216506, -0.25, 0.375, 0.216506, -0.25, 0.375, 0, -0.25, 0.433013, 0, 0, 0.5, 0, -0.25, 0.433013, 0.216506, -0.25, 0.375, 0.125, -0.433013, 0.216506, 0.125, -0.433013, 0.216506, 0, -0.433013, 0.25, 0, -0.25, 0.433013, 0.216506, -0.433013, 0.125, 0.125, -0.433013, 0.216506, 0.216506, -0.25, 0.375, 0.216506, -0.433013, 0.125, 0.25, -0.433013, 1.53076e-17, 0, -0.5, 0, 0, -0.433013, 0.25, 0.125, -0.433013, 0.216506, 0, -0.5, 0, 0.216506, 0.25, -0.375, 5.3027e-17, 0.25, -0.433013, 6.12303e-17, 0, -0.5, 0.5, 0, 3.06152e-17, 0.433013, 0, -0.25, 0.375, -0.25, -0.216506, 0.375, -0.25, -0.216506, 0.433013, -0.25, 2.65135e-17, 0.5, 0, 3.06152e-17, 0.433013, 0, -0.25, 0.25, 0, -0.433013, 0.216506, -0.25, -0.375, 0.216506, -0.25, -0.375, 0.375, -0.25, -0.216506, 0.433013, 0, -0.25, 0.433013, -0.25, 2.65135e-17, 0.375, -0.25, -0.216506, 0.216506, -0.433013, -0.125, 0.216506, -0.433013, -0.125, 0.25, -0.433013, 1.53076e-17, 0.433013, -0.25, 2.65135e-17, 5.3027e-17, -0.25, -0.433013, 0.216506, -0.25, -0.375, 0.25, 0, -0.433013, 0.25, 0, -0.433013, 6.12303e-17, 0, -0.5, 5.3027e-17, -0.25, -0.433013, 0.125, -0.433013, -0.216506, 0.216506, -0.433013, -0.125, 0.375, -0.25, -0.216506, 0.25, -0.433013, 1.53076e-17, 0.216506, -0.433013, -0.125, 0, -0.5, 0, 0.216506, -0.433013, -0.125, 0.125, -0.433013, -0.216506, 0, -0.5, 0, 0.125, -0.433013, -0.216506, 3.06152e-17, -0.433013, -0.25, 0, -0.5, 0, 0.375, -0.25, -0.216506, 0.216506, -0.25, -0.375, 0.125, -0.433013, -0.216506, 0.216506, -0.25, -0.375, 5.3027e-17, -0.25, -0.433013, 3.06152e-17, -0.433013, -0.25, 0.25, 0, 0.433013, 0, 0, 0.5, 0, 0.25, 0.433013, 0.433013, 0.25, 2.65135e-17, 0.375, 0.25, 0.216506, 0.216506, 0.433013, 0.125, 0.216506, 0.433013, 0.125, 0.25, 0.433013, 1.53076e-17, 0.433013, 0.25, 2.65135e-17, 0.216506, 0.25, 0.375, 0.375, 0.25, 0.216506, 0.433013, 0, 0.25, 0.433013, 0, 0.25, 0.25, 0, 0.433013, 0.216506, 0.25, 0.375, 0.375, 0.25, 0.216506, 0.433013, 0.25, 2.65135e-17, 0.5, 0, 3.06152e-17, 0.5, 0, 3.06152e-17, 0.433013, 0, 0.25, 0.375, 0.25, 0.216506, 0.375, 0.25, 0.216506, 0.216506, 0.25, 0.375, 0.125, 0.433013, 0.216506, 0, 0.433013, 0.25, 0.125, 0.433013, 0.216506, 0.216506, 0.25, 0.375, 0.216506, 0.25, 0.375, 0, 0.25, 0.433013, 0, 0.433013, 0.25, 0.25, 0.433013, 1.53076e-17, 0.216506, 0.433013, 0.125, 0, 0.5, 0, 0.125, 0.433013, 0.216506, 0.216506, 0.433013, 0.125, 0.375, 0.25, 0.216506, 0.125, 0.433013, 0.216506, 0, 0.433013, 0.25, 0, 0.5, 0, 0.216506, 0.433013, 0.125, 0.125, 0.433013, 0.216506, 0, 0.5, 0, 0, 0.25, 0.433013, 0.216506, 0.25, 0.375, 0.25, 0, 0.433013, 3.06152e-17, -0.433013, -0.25, 0.125, -0.433013, -0.216506, 0.216506, -0.25, -0.375, 0.375, 0.25, -0.216506, 0.433013, 0.25, 2.65135e-17, 0.25, 0.433013, 1.53076e-17, 0.25, 0.433013, 1.53076e-17, 0.216506, 0.433013, -0.125, 0.375, 0.25, -0.216506, 0.216506, 0.25, -0.375, 0.375, 0.25, -0.216506, 0.216506, 0.433013, -0.125, 0.433013, 0.25, 2.65135e-17, 0.375, 0.25, -0.216506, 0.433013, 0, -0.25, 0.433013, 0, -0.25, 0.5, 0, 3.06152e-17, 0.433013, 0.25, 2.65135e-17, 0.375, 0.25, -0.216506, 0.216506, 0.25, -0.375, 0.25, 0, -0.433013, 0.25, 0, -0.433013, 0.433013, 0, -0.25, 0.375, 0.25, -0.216506, 0.216506, 0.433013, -0.125, 0.25, 0.433013, 1.53076e-17, 0, 0.5, 0, 0.216506, 0.433013, -0.125, 0.125, 0.433013, -0.216506, 0.216506, 0.25, -0.375, 0.125, 0.433013, -0.216506, 0.216506, 0.433013, -0.125, 0, 0.5, 0, 3.06152e-17, 0.433013, -0.25, 0.125, 0.433013, -0.216506, 0, 0.5, 0, 5.3027e-17, 0.25, -0.433013, 0.216506, 0.25, -0.375, 0.125, 0.433013, -0.216506, 0.125, 0.433013, -0.216506, 3.06152e-17, 0.433013, -0.25, 5.3027e-17, 0.25, -0.433013, 6.12303e-17, 0, -0.5, 0.25, 0, -0.433013, 0.216506, 0.25, -0.375, -0.433013, -0.25, -7.95405e-17, -0.375, -0.25, 0.216506, -0.216506, -0.433013, 0.125, -0.25, 0, 0.433013, 0, 0, 0.5, 0, -0.25, 0.433013, 0, -0.25, 0.433013, -0.216506, -0.25, 0.375, -0.25, 0, 0.433013, -0.216506, -0.25, 0.375, 0, -0.25, 0.433013, 0, -0.433013, 0.25, 0, -0.433013, 0.25, -0.125, -0.433013, 0.216506, -0.216506, -0.25, 0.375, -0.375, -0.25, 0.216506, -0.216506, -0.25, 0.375, -0.125, -0.433013, 0.216506, -0.125, -0.433013, 0.216506, 0, -0.433013, 0.25, 0, -0.5, 0, -0.216506, -0.433013, 0.125, -0.125, -0.433013, 0.216506, 0, -0.5, 0, -0.125, -0.433013, 0.216506, -0.216506, -0.433013, 0.125, -0.375, -0.25, 0.216506, -0.25, -0.433013, -4.59227e-17, -0.216506, -0.433013, 0.125, 0, -0.5, 0, -0.433013, 0, 0.25, -0.25, 0, 0.433013, -0.216506, -0.25, 0.375, -0.216506, -0.25, 0.375, -0.375, -0.25, 0.216506, -0.433013, 0, 0.25, -0.5, 0, -9.18455e-17, -0.433013, 0, 0.25, -0.375, -0.25, 0.216506, -0.375, -0.25, 0.216506, -0.433013, -0.25, -7.95405e-17, -0.5, 0, -9.18455e-17, -0.216506, -0.433013, 0.125, -0.25, -0.433013, -4.59227e-17, -0.433013, -0.25, -7.95405e-17, -0.433013, 0, -0.25, -0.25, 0, -0.433013, -0.216506, 0.25, -0.375, -0.216506, -0.25, -0.375, 5.3027e-17, -0.25, -0.433013, 6.12303e-17, 0, -0.5, 6.12303e-17, 0, -0.5, -0.25, 0, -0.433013, -0.216506, -0.25, -0.375, -0.125, -0.433013, -0.216506, -0.216506, -0.433013, -0.125, 0, -0.5, 0, 3.06152e-17, -0.433013, -0.25, -0.125, -0.433013, -0.216506, 0, -0.5, 0, -0.216506, -0.433013, -0.125, -0.125, -0.433013, -0.216506, -0.216506, -0.25, -0.375, -0.216506, -0.433013, -0.125, -0.25, -0.433013, -4.59227e-17, 0, -0.5, 0, -0.125, -0.433013, -0.216506, 3.06152e-17, -0.433013, -0.25, 5.3027e-17, -0.25, -0.433013, 5.3027e-17, -0.25, -0.433013, -0.216506, -0.25, -0.375, -0.125, -0.433013, -0.216506, -0.433013, 0, -0.25, -0.5, 0, -9.18455e-17, -0.433013, -0.25, -7.95405e-17, -0.433013, -0.25, -7.95405e-17, -0.375, -0.25, -0.216506, -0.433013, 0, -0.25, -0.25, 0, -0.433013, -0.433013, 0, -0.25, -0.375, -0.25, -0.216506, -0.375, -0.25, -0.216506, -0.216506, -0.25, -0.375, -0.25, 0, -0.433013, -0.25, -0.433013, -4.59227e-17, -0.216506, -0.433013, -0.125, -0.375, -0.25, -0.216506, -0.375, -0.25, -0.216506, -0.433013, -0.25, -7.95405e-17, -0.25, -0.433013, -4.59227e-17, -0.433013, 0, 0.25, -0.5, 0, -9.18455e-17, -0.433013, 0.25, -7.95405e-17, -0.125, 0.433013, 0.216506, 0, 0.433013, 0.25, 0, 0.25, 0.433013, 0, 0.25, 0.433013, -0.216506, 0.25, 0.375, -0.125, 0.433013, 0.216506, 0, 0.433013, 0.25, -0.125, 0.433013, 0.216506, 0, 0.5, 0, -0.125, 0.433013, 0.216506, -0.216506, 0.433013, 0.125, 0, 0.5, 0, -0.216506, 0.433013, 0.125, -0.25, 0.433013, -4.59227e-17, 0, 0.5, 0, -0.216506, 0.433013, 0.125, -0.125, 0.433013, 0.216506, -0.216506, 0.25, 0.375, -0.216506, 0.25, 0.375, 0, 0.25, 0.433013, 0, 0, 0.5, 0, 0, 0.5, -0.25, 0, 0.433013, -0.216506, 0.25, 0.375, -0.216506, 0.25, 0.375, -0.375, 0.25, 0.216506, -0.216506, 0.433013, 0.125, -0.25, 0.433013, -4.59227e-17, -0.216506, 0.433013, 0.125, -0.375, 0.25, 0.216506, -0.375, 0.25, 0.216506, -0.433013, 0.25, -7.95405e-17, -0.25, 0.433013, -4.59227e-17, -0.375, 0.25, 0.216506, -0.216506, 0.25, 0.375, -0.25, 0, 0.433013, -0.25, 0, 0.433013, -0.433013, 0, 0.25, -0.375, 0.25, 0.216506, -0.433013, 0.25, -7.95405e-17, -0.375, 0.25, 0.216506, -0.433013, 0, 0.25, -0.216506, -0.25, -0.375, -0.375, -0.25, -0.216506, -0.216506, -0.433013, -0.125, -0.216506, 0.433013, -0.125, -0.125, 0.433013, -0.216506, 0, 0.5, 0, -0.125, 0.433013, -0.216506, 3.06152e-17, 0.433013, -0.25, 0, 0.5, 0, -0.25, 0.433013, -4.59227e-17, -0.216506, 0.433013, -0.125, 0, 0.5, 0, -0.125, 0.433013, -0.216506, -0.216506, 0.433013, -0.125, -0.375, 0.25, -0.216506, 3.06152e-17, 0.433013, -0.25, -0.125, 0.433013, -0.216506, -0.216506, 0.25, -0.375, -0.216506, 0.25, -0.375, 5.3027e-17, 0.25, -0.433013, 3.06152e-17, 0.433013, -0.25, -0.375, 0.25, -0.216506, -0.216506, 0.25, -0.375, -0.125, 0.433013, -0.216506, -0.25, 0, -0.433013, 6.12303e-17, 0, -0.5, 5.3027e-17, 0.25, -0.433013, 5.3027e-17, 0.25, -0.433013, -0.216506, 0.25, -0.375, -0.25, 0, -0.433013, -0.216506, 0.433013, -0.125, -0.25, 0.433013, -4.59227e-17, -0.433013, 0.25, -7.95405e-17, -0.433013, 0.25, -7.95405e-17, -0.375, 0.25, -0.216506, -0.216506, 0.433013, -0.125, -0.375, 0.25, -0.216506, -0.433013, 0.25, -7.95405e-17, -0.5, 0, -9.18455e-17, -0.5, 0, -9.18455e-17, -0.433013, 0, -0.25, -0.375, 0.25, -0.216506, -0.216506, 0.25, -0.375, -0.375, 0.25, -0.216506, -0.433013, 0, -0.25)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_y2j1u"]
albedo_texture = ExtResource("4_1gkf0")

[node name="Node3D" type="Node3D"]
transform = Transform3D(1.00172, 0, 0, 0, 1.00172, 0, 0, 0, 1.00172, 0, 0, 0)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_mhcr1")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.701908, -0.308561, 0.641962, 0.090656, 0.855261, 0.510205, -0.706475, 0.416315, -0.572342, 0, 0, 0)
shadow_enabled = true

[node name="Player3D" type="CharacterBody3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 1.12859, 5.78353, -36.8341)
script = ExtResource("1_4chxg")

[node name="novabecky" parent="Player3D" instance=ExtResource("1_aybik")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0344889, -0.541281, 1.16573e-16)

[node name="CameraPivot" type="Node3D" parent="Player3D"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6077, 0.00322914)

[node name="SpringArm3D" type="SpringArm3D" parent="Player3D/CameraPivot"]
unique_name_in_owner = true
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 5.34514e-09, 0.0764267, 0.0611412)
spring_length = 13.455

[node name="Camera3D" type="Camera3D" parent="Player3D/CameraPivot/SpringArm3D"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 4.27059e-14, 0, 1, 0, -4.27059e-14, 0, 1, 2.33508e-13, 0, 13.4638)

[node name="BeckyCollision" type="CollisionShape3D" parent="Player3D"]
transform = Transform3D(1, 0, 3.55271e-15, 0, 1, 0, -3.55271e-15, 0, 1, -0.109949, 1.30417, 0.00685322)
shape = SubResource("CapsuleShape3D_4chxg")
debug_color = Color(0.980472, 0, 0.383358, 0.690196)

[node name="Checkpoint" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 1.11496, 25.341, -44.9722)

[node name="DeathPart" type="Area3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 21.5392, 4.45404, 5.07477)

[node name="CollisionShape3D" type="CollisionShape3D" parent="DeathPart"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -23.2676, -34.38, -206.246)
shape = SubResource("BoxShape3D_1gkf0")

[node name="NewCheck" type="Area3D" parent="." groups=["Checkpoints"]]
unique_name_in_owner = true
transform = Transform3D(0.999999, 0, 0, 0, 0.999999, 0, 0, 0, 0.999999, -42.4531, 32.1145, -168.823)

[node name="CollisionShape3D" type="CollisionShape3D" parent="NewCheck"]
shape = SubResource("BoxShape3D_rdnwj")

[node name="RigidBody3D" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 35.5701, -34.4161)

[node name="CSGSphere3D" type="CSGSphere3D" parent="RigidBody3D"]

[node name="CSGBakedCollisionShape3D" type="CollisionShape3D" parent="RigidBody3D"]
shape = SubResource("ConcavePolygonShape3D_mhcr1")

[node name="CSGBox3D" type="CSGBox3D" parent="."]
transform = Transform3D(0.999998, 0, 0, 0, 0.999998, 0, 0, 0, 0.999998, 5.60994, -5.11913, -37.5512)
use_collision = true
size = Vector3(76.2432, 11.2383, 74.6797)
material = SubResource("StandardMaterial3D_y2j1u")

[connection signal="body_entered" from="DeathPart" to="Player3D" method="_on_death_part_body_entered"]
[connection signal="body_entered" from="NewCheck" to="Player3D" method="_on_new_check_body_entered"]
